[project]
name = "cookie"
title = "OpenAmal API"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.10",
    "fastapi>=0.115.11",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "starlette>=0.46.1",
    "tomli>=2.2.1",
    "uvicorn>=0.34.0",
]
